[tool.poetry]
name = "openlineage-prefect"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.7"
prefect = {version = "^2.0a4", allow-prereleases = true}
openlineage-python = "^0.3.1"
tomlkit = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
